[package]
name = "ray_tracing_rust"
version = "0.2.0"
authors = ["Mohuety Kirisame <somainer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
rand = "0.7.3"
lazy_static = "1.4.0"
rayon = "*"
indicatif = { version = "*", features = ["rayon"] }
image = "*"
